Added tag descriptions

--- a/HTML/14.11.22/index.html
+++ b/HTML/14.11.22/index.html
@@ -1,12 +1,13 @@
+<!DOCTYPE html>
 <html>
     <head>
         <title>Lezione 14/11: Basi HTML</title>
     </head>
     <body>
         <hr><hr>
-        <B><h1 style="text-align: center;">Lezione 14/11: Basi HTML</h1></B>
+        <B><h1 style="text-align: center;">Lezione 14/11/2022: Basi HTML</h1></B>
         <hr><br>
-        <u>COME SI TRASFERISCONO LE RISORSE</u><br>
+        <u>COME SI TRASFERISCONO LE RISORSE:</u><br>
         Le risorse (file,immagini,gif, ecc.) possono essere trasferite mediante le segueti metodologie:<br>
         <ul>
             <li>URL (Uniform Resourse Locator)</li>
@@ -92,9 +93,18 @@
             Ad esempio:<br><a href="https://www.youtube.it">Youtube Weebsite</a>
            </ul> 
         Il tag <strong>P</strong> rappresenta un paragrafo. <p>E&grave; un elemento block e andra&grave; a capo quando raggiungera&grave; l'estremita&grave; del browser. <strong>(Prova a stringere la pagina web per provare questa funzione)</strong></p><br>
-        Il tag <strong>SPAN</strong> 
-        Il tag <strong>DIV</strong> 
+        Il tag <strong>UL</strong><br> rappresenta una lista non ordinata (unordered list) composta da un <strong>Elenco puntato</strong><br>
+        <ul>
+            <li>Pizza</li>
+            <li>Pasta</li>
+            <li>Antonio Cavanacciuolo</li>
+        </ul>
+        Il tag <strong>OL</strong><br>
+        Il tag <strong>H1->H7</strong><br>
+        Il tag <strong>SPAN</strong> ha la funzione di "Container" per contrassegnare una parte di un testo o di un documento<br>
+        Il tag <strong>DIV</strong> ha la funzione di "Container" con lo scopo di utilizzare su esso componenti di tipologia CSS e JS.<br>
         <hr><br><br> 
+        
        
         TAG DESCRITTIVI (H1-->H7)<br>
             Indicano il peso gerarchico dei vari testi <br>
@@ -108,12 +118,7 @@
             <li>UL (unordered list)</li>
             <li>OL (ordered list)</li>
         </ul>
-        Esempio UL (unordered list): <br><br>
-        <ul>
-            <li>Boku no hero academia</li>
-            <li>Naruto</li>
-            <li>Cicciogamer89</li>
-        </ul>
+
         OL (LISTA ORDINATA):
         Esempio: <br><br>
         Per accedere alla mia GANG:
