Implemented table and internal CSS

--- a/HTML/14.11.22/index.html
+++ b/HTML/14.11.22/index.html
@@ -2,6 +2,13 @@
 <html>
     <head>
         <title>Lezione 14/11: Basi HTML</title>
+        <style>
+            td, th {
+            border: 1px solid #dddddd;
+            text-align: left;
+            padding: 8px;
+            }
+        </style>
     </head>
     <body>
         <hr><hr>
@@ -61,7 +68,7 @@
         In una pagina web e&grave; sempre presente queste due parti:<br>
         <ul>
             <li>HEAD</li><br>
-            <li>BODY</li><br>
+            <li>BODY</li>
         </ul>
         Divisione dei tag:
         <ul>
@@ -74,24 +81,65 @@
                 Elenti che hanno un inizio e una fine, tag generico <strong>DIV</strong>
             </ul>
         </ul><br>
+        <strong>DIVERSITA' DEI TAG</strong><br> <!--CONTINUARE IL LAVORO DA QUA-->
+        <table>
+            <tr">
+              <th>Tag</th>
+              <th>Descrizione</th>
+              <th>Esempio</th>
+            </tr>
+            <tr>
+              <td>HEAD</td>
+              <td>nella quale viene scritto il foglio di CSS Integrato e il TAG <strong>Title</strong></td>
+              <td></td>
+            </tr>
+            <tr>
+              <td>TITLE</td>
+              <td><p>rientra nel TAG HEAD e la sua funzione e&grave; quella di dare un titolo alla nostra pagina WEB</p></td>
+              <td></td>
+            </tr>
+            <tr>
+                <td>BODY</td>
+                <td>
+                    <p>contiene tutto il contenuto della pagina WEB</p>
+                </td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>HR</td>
+                <td>
+                    <p>e&grave; la barra di divisione Stile anni '90</p>
+                </td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>IMG</td>
+                <td>
+                    <p>sErve a inserire nella pagina web eventuali immagini</p>
+                </td>
+                <td>Formatti Grafici:
+                    <ul>
+                        <li>JPG 16M Color, no trasparenza. (SOLO FOTO)</li><br>
+                        <li>GIF 256 Color, trasparenza+animato. (SOLO LOGO)</li><br>
+                        <li>PNG 16M Colorm 256 livelli di trasoarenza. (FUNZIONALE X TUTTO)</li>
+                    </ul>
+                </td>
+            </tr>
+            <tr>
+                <td>A</td>
+                <td><p> Viene utilizzato per creare un testo ipertestuale</p></td>
+                <td>
+                    <ul>
+                        <u style="color: red;"><b style="color: red;">PREMESSA: Dove è presente le quadrate vanno sostituite con "<  >"</b></u><br><br>
+                        Ad esempio:<br>[a href="https://www.youtube.it"] Youtube Website [/a]
+                        Ad esempio:<br><a href="https://www.youtube.it">Youtube Weebsite</a>
+                    </ul>
+                </td>
+            </tr>
+          </table>
 
-        Il tag <strong>HEAD</strong> e&grave; quel TAG nella quale viene scritto il foglio di CSS Integrato e il TAG <strong>Title</strong><br>
-        Il tag <strong>TITLE</strong> rientra nel TAG HEAD e la sua funzione e&grave; quella di dare un titolo alla nostra pagina WEB<br>
-        Il tag <strong>BODY</strong> contiene tutto il contenuto della pagina WEB <br>
-        Il tag <strong>HR</strong> e&grave; la barra di divisione Stile anni '90<br>
-        il tag <strong>IMG</strong> serve a inserire nella pagina web eventuali immagini<br>
-            Formatti Grafici:
-            <ul>
-                <li>JPG 16M Color, no trasparenza. (SOLO FOTO)</li><br>
-                <li>GIF 256 Color, trasparenza+animato. (SOLO LOGO)</li><br>
-                <li>PNG 16M Colorm 256 livelli di trasoarenza. (FUNZIONALE X TUTTO)</li>
-            </ul>
-        Il tag <strong>A</strong> Viene utilizzato per creare un testo ipertestuale.<br>
-           <ul>
-            <u style="color: red;"><b style="color: red;">PREMESSA: Dove è presente le quadrate vanno sostituite con "<  >"</b></u><br><br>
-            Ad esempio:<br>[a href="https://www.youtube.it"] Youtube Website [/a]
-            Ad esempio:<br><a href="https://www.youtube.it">Youtube Weebsite</a>
-           </ul> 
+        Il tag <strong>A</strong>.<br>
+ 
         Il tag <strong>P</strong> rappresenta un paragrafo. <p>E&grave; un elemento block e andra&grave; a capo quando raggiungera&grave; l'estremita&grave; del browser. <strong>(Prova a stringere la pagina web per provare questa funzione)</strong></p><br>
         Il tag <strong>UL</strong><br> rappresenta una lista non ordinata (unordered list) composta da un <strong>Elenco puntato</strong><br>
         <ul>
@@ -135,8 +183,6 @@
         <hr><hr><hr>
 
         <u>CSS:</u><br>
-
-        
 
         è quel linguaggio che delinea l'estetica della pagina WEB.<br>
         <ol>
